syntax = "proto3";

option go_package = "github.com/SzymonMielecki/chatApp/usersService";

package usersService;

service UsersService {
    rpc LoginUser(LoginUserRequest) returns (LoginUserResponse) {}
    rpc RegisterUser(RegisterUserRequest) returns (RegisterUserResponse) {}
}

message LoginUserRequest {
    string username_or_email = 1;
    string password = 2;
}

message LoginUserResponse {
    bool success = 1;
    string id = 2;
    string message = 3;
}

message RegisterUserRequest {
    string username = 1;
    string password = 2;
    string email = 3;
}

message RegisterUserResponse {
    bool success = 1;
    string id = 2;
    string message = 3;
}
